add de section plus

--- a/pages/index.html
+++ b/pages/index.html
@@ -93,6 +93,7 @@
                 </div>
             </div>
         </section>
+
         <!-- 1. section -->
         <section class="conten_setion_uno">
             <div class="titulo_setion_uno">
@@ -127,6 +128,7 @@
 
             <div class="fondo_blur"></div>
         </div>
+
         <!-- 2. cinta -->
         <section class="cont_cinta_inicio">
             <div class="slider_inicio">
@@ -184,7 +186,8 @@
                         </p>
                         <div class="titulo_contenido">
                             <p class="titulo">Lugar de residencia</p>
-                            <p class="contenido_contenido">Soy de barranquilla Colombia y actualmente vivo en soledad - atlántico, (con Disponibilidad de viajar).</p>
+                            <p class="contenido_contenido">Soy de barranquilla Colombia y actualmente vivo en soledad -
+                                atlántico, (con Disponibilidad de viajar).</p>
                         </div>
                     </div>
                     <div class="contenido">
@@ -193,7 +196,8 @@
                         </p>
                         <div class="titulo_contenido">
                             <p class="titulo">Diseñador</p>
-                            <p class="contenido_contenido">Diseñador ux - ui, desde hace 2 años con especialidad en ux research y ux writing</p>
+                            <p class="contenido_contenido">Diseñador ux - ui, desde hace 2 años con especialidad en ux
+                                research y ux writing</p>
                         </div>
                     </div>
                     <div class="contenido">
@@ -202,7 +206,8 @@
                         </p>
                         <div class="titulo_contenido">
                             <p class="titulo">Desarrollador móvil</p>
-                            <p class="contenido_contenido">Desarrollador jr fLUTTER certificado por la universidad del norte de barranquilla</p>
+                            <p class="contenido_contenido">Desarrollador jr fLUTTER certificado por la universidad del
+                                norte de barranquilla</p>
                         </div>
                     </div>
                     <div class="contenido">
@@ -228,6 +233,90 @@
                     <p class="context_subtitulo">Desde la ideación hasta producción</p>
                     <p class="etiqueta">( de todo un poco )</p>
                 </div>
+            </div>
+            <div class="cont_lista_mis_servicios">
+                <a class="cont_item_mis_servicios" href="">
+                    <h4>UX-UI</h4>
+                    <P>( 01 )</P>
+                </a>
+                <a class="cont_item_mis_servicios" href="">
+                    <h4>UX - WRITING</h4>
+                    <P>( 02 )</P>
+                </a>
+                <a class="cont_item_mis_servicios" href="">
+                    <h4>UX - RESEARSH</h4>
+                    <P>( 03 )</P>
+                </a>
+                <a class="cont_item_mis_servicios" href="">
+                    <h4>DESARRROLLADOR</h4>
+                    <P>( 04 )</P>
+                </a>
+
+            </div>
+        </section>
+
+        <!-- 5. plus+ -->
+        <section class="cont_section_plus">
+            <div class="cont_titulo_plus">
+                <h3 class="subtitulo_plus">Plus <strong>+</strong></h3>
+                <p class="context_subtitulo">Beneficios de trabajar conmigo</p>
+            </div>
+
+            <div class="slider_plus">
+                <div class="slide-track">
+                    <div class="slide">
+                        <p>DESARROLLADOR</p>
+                    </div>
+                    <div class="slide">
+                        <p>DISEÑADOR</p>
+                    </div>
+                    <div class="slide">
+                        <p>RESEARSHER</p>
+                    </div>
+                    <div class="slide">
+                        <p>ANIMADOR</p>
+                    </div>
+                    <div class="slide">
+                        <p>UX - UI</p>
+                    </div>
+                    <div class="slide">
+                        <p>DESARROLLADOR</p>
+                    </div>
+                    <div class="slide">
+                        <p>DISEÑADOR</p>
+                    </div>
+                    <div class="slide">
+                        <p>RESEARSHER</p>
+                    </div>
+                    <div class="slide">
+                        <p>ANIMADOR</p>
+                    </div>
+                    <div class="slide">
+                        <p>UX - UI</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cont_lista_plus">
+                <div class="cont_item_lista_plus">
+                    <img src="../assets/img/imgplusuno.svg" alt="imgplusuno">
+                    <p class="parrafo_lista_plus">Soy ilustrador, gran parte de mis assets son creados por mi mismo cursor, manejo correctamente las herramientas de ilustración, aun que regularmente me siento cómodo ilustrando desde el mismo figma. </p>
+                </div>
+                <div class="cont_item_lista_plus">
+                    <img src="../assets/img/imgplusdos.svg" alt="imgplusuno">
+                    <p class="parrafo_lista_plus">Puedo realizar animaciones básicas y complejas para todo tipo de producto mediante el uso de todo tipo de herramientas como lo puede ser animaciones con solo css , vanilla java script, Lottie file, Gsap.js, jitter, barba.js y after effects.</p>
+                </div>
+                <div class="cont_item_lista_plus">
+                    <img src="../assets/img/imgplustres.svg" alt="imgplusuno">
+                    <p class="parrafo_lista_plus">Como diseñador ux - ui y desarrollador web - móvil, logro comprender y explotar correctamente las oportunidades para mejorar el producto en el que este trabajando además de poder lograr dar aportes y soporte en areas diferentes a las del diseño.</p>
+                </div>
+            </div>
+
+            <div class="fondo_plus">
+                <img class="bold_uno" src="../assets/img/uno.svg" alt="bold_uno">
+                <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos">
+                <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres">
+                <div class="fondo_blur"></div>
             </div>
 
         </section>
