--- a/pages/index.html
+++ b/pages/index.html
@@ -29,6 +29,8 @@
                 <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="">
                 <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt=""></a>
         </div>
+
+        <!-- Menu -->
         <section class="conte__menu">
             <header class="header__index">
                 <div class="cont__logo__nav">
@@ -319,6 +321,36 @@
                 <div class="fondo_blur"></div>
             </div>
 
+        </section>
+
+
+        <!-- *. pie de pagina -->
+        <section class="cont_pie_de_pagina">
+            <div class="cont_titulo_pie">
+                <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
+                <img src="../assets/img/videopie.gif" alt="videopie">
+            </div>
+
+            <div class="list_social">
+                <div class="cont_uno">
+                    <p class="titulo_list_social">
+                        Social
+                    </p>
+                    <ul>
+                        <a href="">LinkedIn</a>
+                        <a href="">Facebook</a>
+                        <a href="">Instagram</a>
+                        <a href="">Behance</a>
+                    </ul>
+                </div>
+                <div class="cont_dos">
+                    <p>Ponerse En Contacto</p>
+                    <h5>Yaksinvasquez@gmail.com</h5>
+                </div>
+            </div>
+
+            <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla">
+            
         </section>
 
 
