--- a/pages/index.html
+++ b/pages/index.html
@@ -13,15 +13,16 @@
     <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
     <link rel="stylesheet" href="../style/sass.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
-    <script src="https://unpkg.com/@barba/core"></script>
 
     <title>Portafolio Yakhsin sains</title>
 </head>
 
 <body class="body__index">
     <div class="cursor"></div>
+    <div class="conta_scroll_boton">
+    </div>
     <main>
+
         <!-- Boton flotante -->
         <div class="float__wapp">
             <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
@@ -30,7 +31,6 @@
                 <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="">
                 <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt=""></a>
         </div>
-
         <!-- Menu -->
         <section class="conte__menu">
             <header class="header__index">
@@ -96,7 +96,6 @@
                 </div>
             </div>
         </section>
-
         <!-- 1. section -->
         <section class="conten_setion_uno">
             <div class="titulo_setion_uno">
@@ -128,7 +127,6 @@
             <img class="bold_uno" src="../assets/img/uno.svg" alt="bold_uno">
             <img class="bold_dos" src="../assets/img/dos.svg" alt="bold_dos">
             <img class="bold_tres" src="../assets/img/tres.svg" alt="bold_tres">
-
             <div class="fondo_blur"></div>
         </div>
 
@@ -168,6 +166,7 @@
 
         <!-- 3. about me -->
         <section class="cont_aboutme">
+
             <div class="cont_titulo_aboutme">
                 <p class="titulo">Acerca de mi</p>
                 <div class="cont_subtitulo_aboutme">
@@ -225,6 +224,7 @@
 
                 </div>
             </div>
+
         </section>
 
         <!-- 4. servicios -->
@@ -375,14 +375,17 @@
 
 
         <!-- javascripts -->
-        <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js">
-        </script>
+
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
+
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="../js/three.js"></script>
     <script src="../js/admthree.js"></script>
     <script src="../js/script.js"></script>
+
 
 </body>
 
