add figuras glass geometric en bandera

--- a/pages/index.html
+++ b/pages/index.html
@@ -135,31 +135,35 @@
             <div class="slider_inicio">
                 <div class="slide-track">
                     <div class="slide">
-                        <p>HAGAMOS REALIDAD TUS IDEAS.</p>
+                        <p> HAGAMOS REALIDAD TUS IDEAS. </p>
                     </div>
 
                     <video class="video_uno" autoplay muted playsinline loop src="../assets/img/videodos.mp4"></video>
 
                     <div class="slide">
-                        <p>DISEÑADOR Y DESARROLLADOR.</p>
+                        <p> DISEÑADOR Y DESARROLLADOR. </p>
                     </div>
 
                     <video class="video_dos" autoplay muted playsinline loop src="../assets/img/liquid.mp4"></video>
 
                     <div class="slide">
-                        <p>BIENVENIDO A MI PORTAFOLIO.</p>
+                        <p> BIENVENIDO A MI PORTAFOLIO. </p>
                     </div>
 
                     <video class="video_uno" autoplay muted playsinline loop src="../assets/img/videodos.mp4"></video>
 
                     <div class="slide">
-                        <p>DESARROLLO CREATIVO. </p>
+                        <p> DESARROLLO CREATIVO. </p>
                     </div>
+
                     <video class="video_uno" autoplay muted playsinline loop src="../assets/img/videodos.mp4"></video>
 
                     <div class="slide">
-                        <p>HAGAMOS REALIDAD TUS IDEAS.</p>
+                        <p> HAGAMOS REALIDAD TUS IDEAS. </p>
                     </div>
+
+                    <video class="video_uno" autoplay muted playsinline loop src="../assets/img/videodos.mp4"></video>
+
                 </div>
             </div>
         </section>
@@ -330,8 +334,66 @@
 
         </section>
 
-        <!-- 6. bandera -->
-        <section id="bandera" class="bandera"></section>
+
+        <!-- ################################### -->
+        <div class="conten_anima_3d">
+            
+            <div class="cont_figure_geometric_uno">
+
+            </div>
+            <!-- 6. bandera -->
+            <section id="bandera" class="bandera">
+                <div>
+                    <h2 class="titulo_bandera">"TODOS TENEMOS UN DON, EL MIO ES LA CREATIVIDAD"</h2>
+                </div>
+            </section>
+            <!-- 5. Experiencia -->
+            <section class="mis_servicios">
+                <div class="cont_titulo_mis_servicios">
+                    <p class="titulo">Experiencia laboral</p>
+                    <div class="cont_subtitulo_mis_servicios">
+                        <h3 class="subtitulo_aboutme">HE TRABAJADO</h3>
+                    </div>
+                </div>
+                <div class="cont_lista_mis_servicios">
+                    <a class="cont_item_mis_servicios" href="">
+                        <h4>GOOGLE INC.</h4>
+                        <div class="subtitulo_experiencia">
+                            <p class="titulo">Diseñador ux - ui</p>
+                            <p class="fecha">2022 - 2022</p>
+                        </div>
+                        <P>( 01 )</P>
+                    </a>
+                    <a class="cont_item_mis_servicios" href="">
+                        <h4>GOOGLE INC.</h4>
+                        <div class="subtitulo_experiencia">
+                            <p class="titulo">Diseñador ux - ui</p>
+                            <p class="fecha">2022 - 2022</p>
+                        </div>
+                        <P>( 02 )</P>
+                    </a>
+                    <a class="cont_item_mis_servicios" href="">
+                        <h4>GOOGLE INC.</h4>
+                        <div class="subtitulo_experiencia">
+                            <p class="titulo">Diseñador ux - ui</p>
+                            <p class="fecha">2022 - 2022</p>
+                        </div>
+                        <P>( 03 )</P>
+                    </a>
+                    <a class="cont_item_mis_servicios" href="">
+                        <h4>GOOGLE INC.</h4>
+                        <div class="subtitulo_experiencia">
+                            <p class="titulo">Diseñador ux - ui</p>
+                            <p class="fecha">2022 - 2022</p>
+                        </div>
+                        <P>( 04 )</P>
+                    </a>
+
+                </div>
+            </section>
+
+        </div>
+        <!-- ################################### -->
 
 
         <!-- *. pie de pagina -->
