--- a/pages/index.html
+++ b/pages/index.html
@@ -337,16 +337,8 @@
 
         <!-- ################################### -->
         <div class="conten_anima_3d">
-            
-            <div class="cont_figure_geometric_uno">
 
-            </div>
-            <!-- 6. bandera -->
-            <section id="bandera" class="bandera">
-                <div>
-                    <h2 class="titulo_bandera">"TODOS TENEMOS UN DON, EL MIO ES LA CREATIVIDAD"</h2>
-                </div>
-            </section>
+            
             <!-- 5. Experiencia -->
             <section class="mis_servicios">
                 <div class="cont_titulo_mis_servicios">
@@ -390,6 +382,12 @@
                     </a>
 
                 </div>
+            </section>
+            <div class="cont_figure_geometric_uno">
+            </div>
+            <!-- 6. bandera -->
+            <section id="bandera" class="bandera">
+                <h2 class="titulo_bandera">"A todos se nos dio un don, el mío es ser cretivo"</h2>
             </section>
 
         </div>
