add scroll horizontal

--- a/pages/index.html
+++ b/pages/index.html
@@ -336,10 +336,8 @@
 
 
         <!-- ################################### -->
-        <div class="conten_anima_3d">
+        <!-- <div class="conten_anima_3d">
 
-            
-            <!-- 5. Experiencia -->
             <section class="mis_servicios">
                 <div class="cont_titulo_mis_servicios">
                     <p class="titulo">Experiencia laboral</p>
@@ -385,13 +383,122 @@
             </section>
             <div class="cont_figure_geometric_uno">
             </div>
-            <!-- 6. bandera -->
+
             <section id="bandera" class="bandera">
                 <h2 class="titulo_bandera">"A todos se nos dio un don, el mío es ser cretivo"</h2>
             </section>
 
-        </div>
+        </div> -->
         <!-- ################################### -->
+
+        <!-- 8. mi tools -->
+
+        <div class="cont_titulo_mis_horizontal">
+            <p class="titulo">Herramientas y habilidades</p>
+            <div class="cont_subtitulo_mis_horizontal">
+                <h3 class="subtitulo_aboutme">MY SKILLS</h3>
+            </div>
+        </div>
+
+
+        <div class="capa_contenedora">
+            <section class="cont_horizontal_ocho">
+                <section class="cont_horizontal_uno">
+                    <div class="cont_sslider_uno">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+
+                    <div class="cont_sslider_dos">
+                        <div class="sslider_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+
+                    <div class="cont_sslider_uno">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+
+                    <div class="cont_sslider_dos">
+                        <div class="sslider_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+
+                    <div class="cont_sslider_uno">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+
+                    <div class="cont_sslider_dos">
+                        <div class="sslider_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+                    <div class="cont_sslider_uno">
+                        <div class="sslider_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+
+                    <div class="cont_sslider_dos">
+                        <div class="sslider_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_uno">
+                            <img src="../assets/img/img_uno.png" alt="img_dos">
+                            <img src="../assets/img/img_uno.png" alt="img_tres">
+                            <img src="../assets/img/img_uno.png" alt="img_cuatro">
+                            <img src="../assets/img/img_uno.png" alt="img_cinco">
+                            <img src="../assets/img/img_uno.png" alt="img_seis">
+                        </div>
+                    </div>
+                </section>
+
+                <section class="cont_horizontal_dos">
+
+                </section>
+                
+
+            </section>
+        </div>
 
 
         <!-- *. pie de pagina -->
