add estile a section horizontal

--- a/pages/index.html
+++ b/pages/index.html
@@ -242,19 +242,19 @@
                 </div>
             </div>
             <div class="cont_lista_mis_servicios">
-                <a class="cont_item_mis_servicios" href="">
+                <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>UX-UI</h4>
                     <P>( 01 )</P>
                 </a>
-                <a class="cont_item_mis_servicios" href="">
+                <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>UX - WRITING</h4>
                     <P>( 02 )</P>
                 </a>
-                <a class="cont_item_mis_servicios" href="">
+                <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>UX - RESEARSH</h4>
                     <P>( 03 )</P>
                 </a>
-                <a class="cont_item_mis_servicios" href="">
+                <a class="cont_item_mis_servicios cursor-scale small" href="">
                     <h4>DESARRROLLADOR</h4>
                     <P>( 04 )</P>
                 </a>
@@ -494,9 +494,238 @@
 
                 <section class="cont_horizontal_dos">
 
-                </section>
-                
+                    <div class="titulo">
+                        <h3>UI - DESIGNER</h3>
+                        <p>01</p>
+                    </div>
+                    <div class="cont_lista_horizontal_dos">
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.figma.com/">
+                            <div class="titulo">
+                                <h4>Figma</h4>
+                            </div>
 
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 01 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://helpx.adobe.com/xd/get-started.html">
+                            <div class="titulo">
+                                <h4>Adobe xd</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 02 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.adobe.com/la/products/illustrator.html?gclid=CjwKCAiAmZGrBhAnEiwAo9qHiQAvIovo2hn-ZEXzPiE8PxQ_VFlQBOtFjkpTwLClZ47kRci1q_srWhoCn1UQAvD_BwE&sdid=KQPQL&mv=search&ef_id=CjwKCAiAmZGrBhAnEiwAo9qHiQAvIovo2hn-ZEXzPiE8PxQ_VFlQBOtFjkpTwLClZ47kRci1q_srWhoCn1UQAvD_BwE:G:s&s_kwcid=AL!3085!3!459896392480!e!!g!!adobe%20illustrator!9499870682!97813413798&gad_source=1">
+                            <div class="titulo">
+                                <h4>Illustrator</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 03 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.adobe.com/co/products/photoshop.html">
+                            <div class="titulo">
+                                <h4>Photoshop</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 04 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" target="_blank" href="https://www.adobe.com/la/products/premiere/campaign/pricing.html?gclid=CjwKCAiAmZGrBhAnEiwAo9qHif1cnAUPIafDp6n5gzY9YpyCkfrh5rDA71Ra8Z9mxd8xPnYJLw6kLBoC6WYQAvD_BwE&sdid=KQPRY&mv=search&--&gad_source=1&s_kwcid=AL!3085!3!473120598648!e!!g!!premiere%20pro&ef_id=ZBU6MgACcMyRHgA9:20231127221202:s">
+                            <div class="titulo">
+                                <h4>Premier pro</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Basico</p>
+                                <img src="../assets/img/basico.svg" alt="">
+                            </div>
+                            <P>( 05 )</P>
+                        </a>
+                    </div>
+                </section>
+
+                
+                <section class="cont_horizontal_dos">
+
+                    <div class="titulo">
+                        <h3>UX - RESEARCH</h3>
+                        <p>02</p>
+                    </div>
+                    <div class="cont_lista_horizontal_dos">
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>USEBERRY</h4>
+                            </div>
+
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 01 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>OPTIMAL W.</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 02 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>GOOGLE ANALYTICS</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 03 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>HOTJAR</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 04 )</P>
+                        </a>
+                    </div>
+                </section>
+
+                <section class="cont_horizontal_dos">
+
+                    <div class="titulo">
+                        <h3>DEVELOPER</h3>
+                        <p>03</p>
+                    </div>
+                    <div class="cont_lista_horizontal_dos">
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>CSS (SASS)</h4>
+                            </div>
+
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 01 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>JAVASCRIPT</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 02 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>FUTTER</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Alto</p>
+                                <img src="../assets/img/alto.svg" alt="">
+                            </div>
+                            <P>( 03 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>PYTHON</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 04 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>GIT - GITHUB</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 05 )</P>
+                        </a>
+                    </div>
+                </section>
+
+                <section class="cont_horizontal_dos">
+
+                    <div class="titulo">
+                        <h3>INTERACTIVE</h3>
+                        <p>04</p>
+                    </div>
+                    <div class="cont_lista_horizontal_dos">
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>AFTER EFFECT</h4>
+                            </div>
+
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 01 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>LOTTIE</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Jedai</p>
+                                <img src="../assets/img/jedai.svg" alt="">
+                            </div>
+                            <P>( 02 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>GSAP.JS</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 03 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>THREE.JS</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Basico</p>
+                                <img src="../assets/img/basico.svg" alt="">
+                            </div>
+                            <P>( 04 )</P>
+                        </a>
+                        <a class="cont_item_horizontal_dos cursor-scale small" href="">
+                            <div class="titulo">
+                                <h4>BARVA.JS</h4>
+                            </div>
+                            <div class="subtitulo">
+                                <p class="titulo_subtitulo">Medio</p>
+                                <img src="../assets/img/medio.svg" alt="">
+                            </div>
+                            <P>( 05 )</P>
+                        </a>
+                    </div>
+                </section>
             </section>
         </div>
 
